# speedofsound

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  cli.sh  config.example.toml  gradle.properties  io.speedofsound.App.desktop  io.speedofsound.App.json  io.speedofsound.App.metainfo.xml  io.speedofsound.App.yml  io.speedofsound.SpeedOfSound.yml  launch.py  meson.build  mkdocs.yml  requirements-frozen.json  requirements-frozen.txt  requirements.dev.txt  requirements.txt  settings.gradle.kts  speedofsound.doap  speedofsound.in  speedofsound.sh
.claude/skills/release/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-skip.yml  build.yml  dependency-submission.yml  docs.yml  flatpak-build.yml  jpackage-build.yml  release-dispatcher.yml  release-github.yml  release-jpackage.yml  release.yml  ruff.yml  snap-build.yml  snap-publish.yml  tag-release.yml  test.yml
app/: build.gradle.kts  flatpak-sources.json
app/src/main/kotlin/: App.kt
app/src/main/kotlin/com/zugaldia/speedofsound/app/: App.kt  AppConstants.kt  AppUtils.kt
app/src/main/kotlin/com/zugaldia/speedofsound/app/portals/: PortalsSessionManager.kt  RemoteDesktopStatus.kt  TextUtils.kt
app/src/main/kotlin/com/zugaldia/speedofsound/app/settings/: AsrProviderManager.kt  GioStore.kt  (+1 more)
app/src/main/resources/: io.speedofsound.App.gschema.xml  shortcuts.xml  speedofsound.gresource  speedofsound.gresource.xml
app/src/test/resources/: .gitignore  Makefile  sample.txt
assets/: Makefile  README.md  sos-text-editor.webm
buildSrc/: build.gradle.kts  flatpak-sources.json  settings.gradle.kts
buildSrc/src/main/kotlin/: kotlin-jvm.gradle.kts
cli/: build.gradle.kts
cli/src/main/kotlin/com/zugaldia/speedofsound/cli/: AsrCommand.kt  Cli.kt  DownloadCommand.kt  LlmCommand.kt  RecordCommand.kt
core/: build.gradle.kts  flatpak-sources.json
core/libs/: Makefile
core/src/main/kotlin/com/zugaldia/speedofsound/core/: Constants.kt  Credentials.kt  FatalStartupException.kt  Language.kt  LanguageExtensions.kt  Utils.kt
core/src/main/resources/models/asr/: .gitignore  Makefile  tiny-decoder.int8.onnx
core/src/test/kotlin/com/zugaldia/speedofsound/core/: ConstantsTest.kt  LanguageTest.kt  UtilsTest.kt
data/: io.speedofsound.App.desktop.in  io.speedofsound.App.gresource.xml  io.speedofsound.App.gschema.xml  io.speedofsound.App.metainfo.xml.in  io.speedofsound.SpeedOfSound.desktop.in  io.speedofsound.SpeedOfSound.gschema.xml  io.speedofsound.SpeedOfSound.metainfo.xml.in  io.speedofsound.SpeedOfSound.service.in  meson.build
data/icons/: meson.build
docs/: CNAME  FAQ.md  README.md  RELEASING.md  advanced.md  config.md  context.md  development.md  elevenlabs.md  faq.md  getting-started.md  google.md  index.md  input.md  install.md  keyboard-shortcut.md  manual-installation.md  nvidia.md  openai.md  support.md  trigger.md  troubleshooting.md  user-guide.md  whisper.md
docs/.well-known/: org.flathub.VerifiedApps.txt
docs/assets/videos/: Makefile  demo-dark.webm  demo-light.webm
docs/providers/: google.md  nvidia.md  openai.md  whisper.md
docs/stylesheets/: extra.css
extension/: .gitignore  Makefile  README.md  extension.js  metadata.json  package.json
extension/schemas/: org.gnome.shell.extensions.speedofsound.gschema.xml
generator/: build.gradle.kts
generator/src/main/resources/: Makefile  openresponses.json
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
po/: POTFILES  meson.build
scripts/: build-appimage.sh  trigger.sh
snap/: .gitignore  asound.conf  snapcraft.yaml
speedofsound/: application.py  constants.py  languages.py  models.py  utils.py  verification.py
speedofsound/data/: style.css
speedofsound/services/: base_provider.py  base_service.py
speedofsound/services/benchmark/: __init__.py  benchmark_service.py  models.py
speedofsound/services/configuration/: __init__.py  configuration_service.py
speedofsound/services/context/: __init__.py  atspi_client.py  context_service.py  prompts.py
speedofsound/services/control/: __init__.py  control_service.py  joystick_control.py
speedofsound/services/extension/: __init__.py  extension_service.py
speedofsound/services/orchestrator/: __init__.py  atspi_client.py  orchestrator_service.py
speedofsound/services/recorder/: __init__.py  base_recorder.py  gstreamer_recorder.py  pyaudio_recorder.py  recorder_service.py
speedofsound/services/transcriber/: __init__.py  models.py  transcriber_prompts.py  transcriber_service.py
speedofsound/services/transcriber/apis/: __init__.py  base_nvidia_transcriber.py  base_transcriber.py  elevenlabs_transcriber.py  fallback_transcriber.py  faster_whisper_transcriber.py  fastest_transcriber.py  google_transcriber.py  nvidia_nim_transcriber.py  nvidia_riva_transcriber.py  openai_transcriber.py  race_transcriber.py  whisper_transcriber.py
speedofsound/services/typist/: __init__.py  atspi_typist.py  base_typist.py  pynput_typist.py  typist_service.py  xdotool_typist.py  ydotool_typist.py
speedofsound/ui/: base_view_model.py  base_view_state.py
speedofsound/ui/content/: content_widget.py
speedofsound/ui/dashboard/: dashboard_view_model.py  dashboard_view_state.py  dashboard_window.py
speedofsound/ui/input/: input_widget.py
speedofsound/ui/main/: main_view_model.py  main_view_state.py  main_window.py
speedofsound/ui/preferences/: __init__.py  preferences_page_advanced.py  preferences_page_asr.py  preferences_page_base.py  preferences_page_general.py  preferences_view_model.py  preferences_window.py
speedofsound/ui/status/: status_bar.py  status_column.py
speedofsound/ui/welcome/: welcome_window.py
tests/: __init__.py
tests/integration/: __init__.py
tests/integration/services/: __init__.py
tests/unit/: __init__.py  test_application.py  test_constants.py
tests/unit/services/: __init__.py
utils/src/main/kotlin/: Utilities.kt
utils/src/test/kotlin/: UtilitiesTest.kt
(+180 files in other folders)
